@@ -1,8 +1,9 @@
           <h2><a name="What"></a>Direct Access</h2>
           <p>
 You can also directly access the raw directories where these
-<a href="http://sdcc.sourceforge.net/snapshots/">snapshots</a> and
-<a href="http://sdcc.sourceforge.net/regression_test_results/">regression test results</a>
+<a href="http://sdcc.sourceforge.net/snapshots/">snapshots</a>,
+<a href="http://sdcc.sourceforge.net/regression_test_results/">regression test results</a> and
+<a href="http://sdcc.sourceforge.net/changelog_heads/">ChangeLog heads</a>
 are stored, rather than using this pretty html version.
           </p>
 <?php include('./footer.php')?>
